# tree-sitter-tome

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tomefile.pc.in
bindings/c/tree_sitter/: tree-sitter-tomefile.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tomefile/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTomefileTests/: TreeSitterTomefileTests.swift
queries/tome/: highlights.scm
src/: grammar.json  node-types.json  parser.c
