[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-tomefile"
description = "Command language created for more elegant and intuitive automation. Spiritual successor to Makefiles"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "tomefile"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "BubbleFish", email = "daforsastudia@gmail.com" }]
requires-python = ">=3.10"
license.text = "ISC"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tomefile/tree-sitter-tomefile"
Funding = "https://opencollective.com/bbfh"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
